# nonebot-plugin-penguin

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  getDropData.py  getItemInfo.py  getStageInfo.py  plugin_config.py  pyh.py  pyproject.toml  query.py  queryInfo.py  readme.md  sortDropData.py  test.html  test_workflow.py  trimDropData.py  updateInfo.py
.github/workflow/: test.yml
.github/workflows/: release-trigger.yml  release.yml  test.yml
card/: card.html
card/css/: card.css
dataTrim/: queryInfo.py  trimDropData.py  updateInfo.py
dataTrim/pyhtml/: __init__.py  tag.py
html/: styles.css
nonebot_plugin_penguin/: __init__.py  config.py  db.py  model.py  request.py  schedule.py  startup.py  trim.py  types.py  user.py  utils.py
nonebot_plugin_penguin/render/: __init__.py  item_sprite.py  table.py  utils.py
nonebot_plugin_penguin/render/templates/: app.css  card.css  card.html  item_card.html  stage_card.html
pyhtml/: pyh.py
render/: htmlRander.py
src/: dropItem.json  itemId.json  itemIdDB.json  stageIdDB.json
tests/: conftest.py  test_config.py  test_db.py  test_htmlparser.py  test_matrix_export.py  test_render.py  test_request.py  test_schedule.py  test_startup.py  test_trim.py  test_uesr.py  test_user.py  utils.py
tests/static/request/: fake_exact_main_00-01_item_2001.html  fake_exact_main_01-07_item_30012.html  fake_fetch_error.html  fake_item_2004.html  fake_item_30014.html  fake_item_30014.json  fake_items.json  fake_matrix_result.json  fake_penguin_raw.json  fake_stage_main_00-01.html  fake_stage_main_01-07.html  fake_stage_main_01-07.json  fake_stages.json
tests/user/: test_find_err.py  test_search_multi.py  test_search_single.py  test_user_err.py
