[tool.poetry]
name = "testpy"
version = "1.0.0"
description = "nonebot-plugin-penguin dependencies"
authors = ["Azide <rukuy@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
requests = "^2.27.1"
tinydb = "^4.7.0"
selenium = "^4.1.3"
nonemoji = "^0.1.3"
pre-commit = "^3.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
