[tool.poetry]
name = "nonebot-plugin-penguin"
version = "0.0.1"
description = ""
authors = ["Azide <rukuy@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.7.1"
nonebot2 = "^2.0.0rc4"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^23.1.0"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
